--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
     "nodemailer": "^6.10.1",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
