--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
+    "ical-generator": "^8.1.1",
     "nodemailer": "^6.10.1",
     "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
