--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "helmet": "^8.1.0",
     "ical-generator": "^8.1.1",
     "nodemailer": "^6.10.1",
+    "pino": "^9.6.0",
     "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -61,6 +62,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.7.0",
     "source-map-support": "^0.5.21",
