--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.7.0",
+    "@types/passport": "^1.0.17",
     "ANMAR25_D02_COMPASSRESERVATION": "file:",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
