--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.5",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.7.0",
     "ANMAR25_D02_COMPASSRESERVATION": "file:",
     "bcrypt": "^5.1.1",
