--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.1.5",
+    "@nestjs/swagger": "^11.1.6",
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.7.0",
     "ANMAR25_D02_COMPASSRESERVATION": "file:",
@@ -48,7 +48,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
-    "swagger": "^0.0.1"
+    "swagger": "^0.0.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
